tweaked page layout to prevent squashing

--- a/client/public/css/game.css
+++ b/client/public/css/game.css
@@ -136,12 +136,13 @@ body {
   width: 80%;
   height: 80%;
   margin-top: 2%;
+  margin-bottom: 2%;
   margin-left: 10%;
   margin-right: 10%;
   grid-template-areas: "game game game"
   "legend board player"
   "legend board card";
-  grid-template-rows: .8fr 2fr 3fr;
+  grid-template-rows: .5fr 1.5fr 2fr;
   grid-template-columns: 0.3fr 2fr 1fr;
 }
 
